--- a/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
@@ -11,5 +11,5 @@ zuul:
 eureka:
   client:
     eureka-server-port: 8080
-      register-with-eureka: true
-      fetch-registry: true
+      registerWithEureka: true
+      fetchRegistry: true
