--- a/microservice-with-api-gateway-eureka/bank/discovery-service/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/discovery-service/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 #https://github.com/luizkowalski/microservices-netflix-sample/blob/master/contacts/src/main/resources/application.yml
+server:
+  port: 8080
 eureka:
     numberRegistrySyncRetries: 1
     instance:
@@ -9,5 +11,5 @@ eureka:
       fetchRegistry: false
       serviceUrl:
         defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-  server:
-    enable-self-preservation: false
+    server:
+      enable-self-preservation: true
