--- a/microservice-with-api-gateway-eureka/bank/branch-service/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/branch-service/src/main/resources/application.yml
@@ -15,8 +15,11 @@ spring:
 
 eureka:
     client:
+        registerWithEureka: true
+        fetchRegistry: true
         serviceUrl:
             defaultZone: ${EUREKA_URL}
+        eureka-server-port: 8080
     instance:
         instanceId: ${spring.application.name}:${random.value}
         preferIpAddress: true
