--- a/microservice-with-api-gateway-eureka/bank/customer-service/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/customer-service/src/main/resources/application.yml
@@ -14,8 +14,11 @@ spring:
             ddl-auto: create
 eureka:
     client:
+        registerWithEureka: true
+        fetchRegistry: true
         serviceUrl:
             defaultZone: ${EUREKA_URL}
+        eureka-server-port: 8080
     instance:
         instanceId: ${spring.application.name}:${random.value}
         preferIpAddress: true
