--- a/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
@@ -17,6 +17,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: ${EUREKA_URL}
+      #defaultZone: ${EUREKA_URL}
+      defaultZone: ${EUREKA_URI:http://eureka-server:8080/eureka}
     eureka-server-port: 8080
 
