--- a/microservice-with-api-gateway-eureka/bank/branch-service/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/branch-service/src/main/resources/application.yml
@@ -18,7 +18,8 @@ eureka:
         registerWithEureka: true
         fetchRegistry: true
         serviceUrl:
-            defaultZone: ${EUREKA_URL}
+            defaultZone: ${EUREKA_URI:http://eureka-server:8080/eureka}
+            #${EUREKA_URL}
         eureka-server-port: 8080
     instance:
         instanceId: ${spring.application.name}:${random.value}
