--- a/microservice-with-api-gateway-eureka/bank/api-gateway/pom.xml
+++ b/microservice-with-api-gateway-eureka/bank/api-gateway/pom.xml
@@ -14,6 +14,7 @@
     <description>Bank API Gateway</description>
 
     <properties>
+        <jackson.version>2.11.0</jackson.version>
     </properties>
 
     <dependencies>
@@ -54,6 +55,12 @@
 			<version>${spring-boot.version}</version>
         </dependency>
 
+        <!-- spring cloud -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>${spring-cloud.version}</version>
+        </dependency>
         <!-- Third parties -->
         <dependency>
             <groupId>org.jolokia</groupId>
@@ -90,6 +97,21 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
     </dependencies>
     <build>
