--- a/microservice-with-api-gateway-eureka/bank/customer-service/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/customer-service/src/main/resources/application.yml
@@ -17,9 +17,7 @@ eureka:
         registerWithEureka: true
         fetchRegistry: true
         serviceUrl:
-            defaultZone: ${EUREKA_URI:http://eureka-server:8080/eureka}
-            #${EUREKA_URL}
-        eureka-server-port: 8080
+            defaultZone: ${EUREKA_URL} #${EUREKA_URI:http://eureka-server:8080/eureka}
     instance:
         instanceId: ${spring.application.name}:${random.value}
         preferIpAddress: true
