--- a/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/bootstrap.yml
+++ b/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
  #   config:
  #     uri: http://localhost:8888
   application:
-    name: bank-api-gateway
+    name: api-gateway
 ---
 #spring:
  # profiles: docker
