--- a/microservice-with-api-gateway-eureka/bank/discovery-service/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/discovery-service/src/main/resources/application.yml
@@ -1,15 +1,13 @@
 #https://github.com/luizkowalski/microservices-netflix-sample/blob/master/contacts/src/main/resources/application.yml
 server:
-  port: 8080
+  port: 8761
+
 eureka:
-    numberRegistrySyncRetries: 1
-    instance:
-      preferIpAddress: true
-      hostname: eureka-server
-    client:
-      registerWithEureka: false
-      fetchRegistry: false
-      serviceUrl:
-        defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-    server:
-      enable-self-preservation: true
+  instance:
+    hostname: localhost
+  # standalone mode
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
