--- a/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
@@ -2,13 +2,20 @@ zuul:
   prefix: /api
   ignoredServices: '*'
   routes:
+    customer-service: /customer/**
+    api-gateway: /gateway/**
+
+#zuul:
+#  prefix: /api
+#  ignoredServices: '*'
+#  routes:
     #branch-service:
     #  path: /branch-service/**
     #  serviceId: branch-service
     #  stripPrefix: true
       #url: http://branch-service:8080
-    customers-service:/customer/**
-    api-gateway: /gateway/**
+    #customers-service:/customer/**
+    #api-gateway: /gateway/**
     #customers-service:
     #  path: /customer-service/**
     #  serviceId: customer-service
@@ -18,7 +25,7 @@ zuul:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://discovery-server:8761/eureka/
+      defaultZone: http://discovery-service:8761/eureka/
       
 #eureka:
 #  client:
