--- a/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
@@ -3,8 +3,9 @@ zuul:
   ignoredServices: '*'
   routes:
     customer-service:
-      path: /customer-service/**
+      path: /api/customer-service/**
       serviceId: customer-service
+      stripPrefix: false
     #api-gateway: /gateway/**
 
 #zuul:
