--- a/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
+++ b/microservice-with-api-gateway-eureka/bank/api-gateway/src/main/resources/application.yml
@@ -5,7 +5,7 @@ zuul:
     customer-service:
       path: /api/customer-service/**
       serviceId: customer-service
-      stripPrefix: false
+      stripPrefix: true
     #api-gateway: /gateway/**
 
 #zuul:
