--- a/microservice-with-api-gateway-eureka-ribbon/bank/customer-service/pom.xml
+++ b/microservice-with-api-gateway-eureka-ribbon/bank/customer-service/pom.xml
@@ -8,7 +8,7 @@
 		<version>1.1</version>
 	</parent>
 	<groupId>com.test.bank.customer</groupId>
-	<artifactId>customers-service</artifactId>
+	<artifactId>customer-service</artifactId>
 	<packaging>jar</packaging>
 	<description>Bank Customers Service</description>
 
