--- a/microservice-with-api-gateway-eureka-ribbon/bank/load-balance-service/pom.xml
+++ b/microservice-with-api-gateway-eureka-ribbon/bank/load-balance-service/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.4</version>
         </dependency>
+
+	<dependency>
+	    <groupId>org.apache.httpcomponents</groupId>
+	    <artifactId>httpclient</artifactId>
+	    <version>4.3.4</version>
+	</dependency>
     </dependencies>
 	<build>
         <finalName>${project.artifactId}</finalName>
