--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/branch-service/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/branch-service/pom.xml
@@ -46,6 +46,12 @@
 			<version>${spring-cloud.version}</version>
         </dependency>
 		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>${spring-cloud.version}</version>
+		</dependency>
+		
         <!-- Third parties -->
         <dependency>
             <groupId>mysql</groupId>
