--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/pom.xml
@@ -64,6 +64,12 @@
 		
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>${spring-cloud.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-hystrix</artifactId>
 			<version>1.4.7.RELEASE</version>
 		</dependency>
