--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/bootstrap.yml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/bootstrap.yml
@@ -1,3 +1,9 @@
 spring:
   application:
     name: api-gateway-service
+
+spring:
+  profiles: docker
+  cloud:
+    config:
+      uri: http://config-server:8888
