--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/discovery-service/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/discovery-service/pom.xml
@@ -58,6 +58,12 @@
 			<version>${spring-boot.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>${spring-cloud.version}</version>
+		</dependency>
+		
         <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
