--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/load-balance-service/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/load-balance-service/pom.xml
@@ -43,7 +43,13 @@
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
 			<version>${spring-boot.version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>${spring-cloud.version}</version>
+		</dependency>
+		
         <!-- Testing -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
