--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/load-balance-service/src/main/resources/bootstrap.yml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/load-balance-service/src/main/resources/bootstrap.yml
@@ -1,3 +1,10 @@
 spring:
   application:
     name: load-balance-service
+
+spring:
+  profiles: docker
+  cloud:
+    config:
+      uri: http://config-server:8888
+    
