--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/application-local.yml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/application-local.yml
@@ -1,9 +1,15 @@
-zuul:
-  routes:
-    branch-service:
-      path: /branch-service/**
-      url: http://localhost:8070
+server:
+  port: 8080
 
-    customers-service:
+zuul:
+  ignoredServices: '*'
+  routes:
+    customer-service:
       path: /customer-service/**
-      url: http://localhost:8090
+      url: http://localhost:8081
+# To enable eureka client
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+      
