--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/config-server/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/config-server/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.test.k8s</groupId>
-	    <artifactId>microservice-k8s-api-gateway-eureka-config</artifactId>
+		<groupId>com.test.bank</groupId>
+	    <artifactId>k8-api-gateway-eureka-ribbon-hystrix-config</artifactId>
 		<version>1.1</version>
 		<relativePath /> 
 	</parent>
@@ -13,18 +13,20 @@
 	<artifactId>config-server</artifactId>
 	<version>1.1</version>
 	<name>config-server</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Config Server</description>
 
 	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-config-server</artifactId>
+			<version>${spring-cloud.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring-boot.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
