--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.test.bank</groupId>
-	<artifactId>k8-bank-with-api-gateway-eureka-ribbon-hystrix</artifactId>
+	<artifactId>k8-api-gateway-eureka-ribbon-hystrix-config</artifactId>
 	<version>1.1</version>
 	<packaging>pom</packaging>
 
@@ -19,6 +19,7 @@
     </properties>
 
 	<modules>
+		<module>config-server</module>
 		<module>branch-service</module>
 		<module>customer-service</module>
 		<module>discovery-service</module>
