--- a/config-prop-local-kagerhc/customer-service.yml
+++ b/config-prop-local-kagerhc/customer-service.yml
@@ -26,4 +26,4 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
