--- a/config-prop-local-kagerhc/load-balance-service.yml
+++ b/config-prop-local-kagerhc/load-balance-service.yml
@@ -10,4 +10,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://discovery-service:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
