--- a/config-prop-local-kagerhc/api-gateway-service.yml
+++ b/config-prop-local-kagerhc/api-gateway-service.yml
@@ -12,5 +12,5 @@ zuul:
 eureka:
   client:
     serviceUrl:
-      defaultZone: ${EUREKA_URL}
+      defaultZone: http://localhost:8761/eureka/
      
