--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/bootstrap.yml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/bootstrap.yml
@@ -1,7 +1,14 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: api-gateway-service
-
+  cloud:
+    config:
+    #enabled: false
+      uri: http://localhost:8888
+---
 spring:
   profiles: docker
   cloud:
