--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/customer-service/src/main/resources/bootstrap.yml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/customer-service/src/main/resources/bootstrap.yml
@@ -1,7 +1,15 @@
+server:
+  port: 8082
+
 spring:
   application:
     name: customer-service
+  cloud:
+    config:
+      #enabled: false
+      uri: http://localhost:8888
 
+---
 spring:
   profiles: docker
   cloud:
