--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/discovery-service/src/main/resources/bootstrap.yml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/discovery-service/src/main/resources/bootstrap.yml
@@ -1,7 +1,26 @@
+server:
+  port: 8761
+
 spring:
   application:
     name: discovery-service
+  cloud:
+    config:
+      #enabled: false
+      uri: http://localhost:8888
 
+eureka:
+  instance:
+    hostname: localhost
+  # standalone mode
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
+
+---
 spring:
   profiles: docker
   cloud:
