--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/load-balance-service/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/load-balance-service/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.9.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.12</version>
+        </dependency>
+
     </dependencies>
 	<build>
         <finalName>${project.artifactId}</finalName>
