--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/pom.xml
@@ -25,5 +25,6 @@
 		<module>discovery-service</module>
 		<module>api-gateway</module>
 		<module>load-balance-service</module>
+		<module>openfeign-client</module>
     </modules>
 </project>
