--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/branch-service/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/branch-service/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <dockerImagePrefix>bnk</dockerImagePrefix>
+        <spring-cloud.version>2.2.1.RELEASE</spring-cloud.version>
     </properties>
 
 	<dependencies>
