--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/pom.xml
@@ -15,6 +15,7 @@
 
     <properties>
         <jackson.version>2.11.0</jackson.version>
+        <spring-cloud.version>2.2.1.RELEASE</spring-cloud.version>
     </properties>
 
     <dependencies>
