--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/config-server/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/config-server/pom.xml
@@ -15,7 +15,9 @@
 	<name>config-server</name>
 	<description>Config Server</description>
 
-	
+	<properties>
+		<spring-cloud.version>2.2.1.RELEASE</spring-cloud.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
