--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/customer-service/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/customer-service/pom.xml
@@ -14,6 +14,8 @@
 
     <properties>
         <jackson.version>2.11.0</jackson.version>
+        <swagger-version>2.9.2</swagger-version>
+        <spring-cloud.version>2.2.1.RELEASE</spring-cloud.version>
     </properties>
 
 	<dependencies>
@@ -54,8 +56,20 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 			<version>${spring-cloud.version}</version>
 		</dependency>
-		
+
         <!-- Third parties -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger-version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger-version}</version>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -118,6 +132,16 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+            <version>${spring-cloud.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <version>${spring-cloud.version}</version>
+        </dependency>
 	</dependencies>
 
     <build>
@@ -135,11 +159,7 @@
                     </execution>
                 </executions>
             </plugin>
-           <!-- <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>0.20.0</version>
-            </plugin>-->
+
         </plugins>
     </build>
 </project>
