--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/openfeign-client/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/openfeign-client/pom.xml
@@ -22,6 +22,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<jackson.version>2.11.0</jackson.version>
+		<spring-cloud.version>2.2.1.RELEASE</spring-cloud.version>
 	</properties>
 
 	<dependencies>
