--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/bootstrap.yml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/bootstrap.yml
@@ -13,6 +13,7 @@ spring:
     mongodb:
       port: 27017
       host: localhost
+      uri: mongodb://localhost:27017/api_gateway
 ---
 spring:
   profiles: docker
