--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/customer-service/src/main/resources/bootstrap.yml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/customer-service/src/main/resources/bootstrap.yml
@@ -19,3 +19,8 @@ spring:
   cloud:
     config:
       uri: http://config-server:8888
+  zipkin:
+    baseUrl: http://zipkin-server:9411/zipkin/
+  sleuth:
+    sampler:
+    probability: 1
