--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/bootstrap.yml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/src/main/resources/bootstrap.yml
@@ -6,10 +6,12 @@ spring:
     name: api-gateway-service
   cloud:
     config:
+      debug: true
       uri: http://localhost:8888
 
 
 ---
+
 spring:
   profiles: docker
   cloud:
