--- a/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/pom.xml
+++ b/k8-api-gateway-eureka-ribbon-hystrix-config/bank/api-gateway/pom.xml
@@ -106,7 +106,12 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.16</version>
+            <scope>runtime</scope>
+        </dependency>
         <!-- Third parties -->
         <dependency>
             <groupId>org.jolokia</groupId>
