--- a/config-prop-local-kagerhc-k8/api-gateway-service.yml
+++ b/config-prop-local-kagerhc-k8/api-gateway-service.yml
@@ -1,43 +1,41 @@
+server:
+  port: 8080
+
+#spring:      
+#  data:
+#    mongodb:
+#      uri: mongodb://localhost:27017/api_gateway
+#      username: root
+#      password: root
+#      database: api_gateway
+#      port: 27017
+#      host: localhost
+#      authentication-database: admin
+
+spring:
+    datasource:
+        driver-class-name: com.mysql.cj.jdbc.Driver
+        url: jdbc:mysql://${DB_HOST}/${DB_NAME}?useSSL=false
+        username: ${DB_USERNAME}
+        password: ${DB_PASSWORD}
+        hikari:
+            initialization-fail-timeout: 0        
+    jpa:
+        database-platform: org.hibernate.dialect.MySQL5Dialect
+        generate-ddl: true
+        show-sql: true
+        hibernate:
+            ddl-auto: update
+
 zuul:
- # prefix: /api
   ignoredServices: '*'
   routes:
     customer-service:
-      path: /api/customer-service/**
-      #serviceId: customer-service
-      #stripPrefix: true
+      path: /customer-service/**
       url: http://customer-service:8080
-    #api-gateway: /gateway/**
 
-#zuul:
-#  prefix: /api
-#  ignoredServices: '*'
-#  routes:
-    #branch-service:
-    #  path: /branch-service/**
-    #  serviceId: branch-service
-    #  stripPrefix: true
-      #url: http://branch-service:8080
-    #customers-service:/customer/**
-    #api-gateway: /gateway/**
-    #customer-service:
-    #  path: /customer-service/**
-    #  serviceId: customer-service
-    #  stripPrefix: false
-      #url: http://customer-service:8080
 # To enable eureka client
 eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-service:8761/eureka/
-      
-#eureka:
-#  client:
-#    registerWithEureka: false
-#    fetchRegistry: true
-#    serviceUrl:
-#      defaultZone: ${EUREKA_URL} #${EUREKA_URI:http://eureka-server:8080/eureka}
-#  instance:
-#    instanceId: ${spring.application.name}:${random.value}
-#    preferIpAddress: true
-
